--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     laravel.test:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.1
+            context: ./docker/8.1
             dockerfile: Dockerfile
             args:
                 WWWGROUP: '${WWWGROUP}'
@@ -26,6 +26,16 @@ services:
             - redis
             - meilisearch
             - selenium
+    nginx:
+        image: nginx
+        container_name: nginx
+        ports:
+            - 8080:80
+        volumes:
+            - ./web:/var/www
+            - ./etc/nginx/default.conf/nginx.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - php
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -42,7 +52,7 @@ services:
         networks:
             - sail
         healthcheck:
-            test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
+            test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
             retries: 3
             timeout: 5s
     redis:
@@ -54,7 +64,7 @@ services:
         networks:
             - sail
         healthcheck:
-            test: ["CMD", "redis-cli", "ping"]
+            test: [ "CMD", "redis-cli", "ping" ]
             retries: 3
             timeout: 5s
     meilisearch:
@@ -66,7 +76,14 @@ services:
         networks:
             - sail
         healthcheck:
-            test: ["CMD", "wget", "--no-verbose", "--spider",  "http://localhost:7700/health"]
+            test:
+                [
+                    "CMD",
+                    "wget",
+                    "--no-verbose",
+                    "--spider",
+                    "http://localhost:7700/health"
+                ]
             retries: 3
             timeout: 5s
     mailhog:
