--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3.9"
 
 services:
-    # サービス名
     app:
+        # php コンテナ
         build:
             context: .
             dockerfile: ./app/Dockerfile
         volumes:
             - ./src/:/app
     web:
+        # nginx コンテナ
         build:
             context: .
             dockerfile: ./docker/web/Dockerfile
@@ -18,3 +19,20 @@ services:
             - app
         volumes:
             - ./src/:/app
+    db:
+        # mysql コンテナ
+        build:
+            context: .
+            dockerfile: ./docker/db/Dockerfile
+        ports:
+            - 3306:3306
+        environment:
+            MYSQL_DATABASE: database
+            MYSQL_USER: user
+            MYSQL_PASSWORD: password
+            MYSQL_ROOT_PASSWORD: password
+            TZ: 'Asia/Tokyo'
+        volumes:
+            - mysql-volume:/var/lib/mysql
+volumes:
+    mysql-volume:
