--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "laravel/ui": "^3.4"
+    },
+    "config": {
+        "platform": {
+            "php": "7.3"
+        }
     }
 }
