--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,23 @@
 version: "3.9"
 
 services:
+    # laravel.test:
+    #     build:
+    #         context: ./vendor/laravel/sail/runtimes/7.4
+    #         #   dockerfile: Dockerfile
+    #         # args:
+    #         #     WWWGROUP: "${WWWGROUP}"
+    #     image: sail-7.4/app
+    #     # extra_hosts:
+    #     #     - "host.docker.internal:host-gateway"
+    #     # ports:
+    #     #     - "${APP_PORT:-80}:88"
+    #     volumes:
+    #         - ".:/var/www/html"
+    #     # networks:
+    #     #     - sail
+    #     depends_on:
+    #         - mysql
     app:
         # php コンテナ
         build:
