add itemtable, by Factory

--- a/app/php.ini
+++ b/app/php.ini
@@ -11,6 +11,7 @@ display_startup_errors = on
 log_errors = on
 error_log = /var/log/php/php-error.log
 default_charset = UTF-8
+extension=mysqli
 
 [Date]
 date.timezone = Asia/Tokyo
