--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
             context: .
             dockerfile: ./docker/web/Dockerfile
         ports:
-            - 8080:80
+            - 8000:80
         depends_on:
             - app
         volumes:
@@ -51,6 +51,7 @@ services:
             TZ: 'Asia/Tokyo'
         volumes:
             - mysql-volume:/var/lib/mysql
+            - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
     phpmyadmin:
         # Docker Hubからイメージをダウンロード
         image: phpmyadmin/phpmyadmin
